--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -70,7 +70,7 @@
     align-self: center;
 }
 .section1-container {
-    padding: 55px;
+    padding-top: 55px;
 }
 .section1 {
     height: auto;
@@ -85,6 +85,7 @@
 .section2-container {
     background-image: url('kids-green-background.png');
     background-size: 100% 100%;
+    margin-top: -28px;
 
 }
 .section2 {
